--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div><a class="start" onclick="start()">Start</a></div>
     <div><a class="restart" onclick="restartGame()">Restart</a></div>
         <div id="dd" class="dd-content">
             <div><a class="normal" href="index.html" target="_blank">Normal</a></div>
@@ -13,7 +14,7 @@
             <div><a class="hackerpp" href="hackerpp/index.html" target="_blank">Hacker++</a></div><br><br><br>
     </div>
     <p>Time : <span id="timer"></span></p>
-    <p>Clicks : <span id="counts"></span></p>
+    <p>Score : <span id="counts"></span></p>
     <p>Best Time : </p>
     <p class="best_time"></p>
     <p class="best_time"></p>
