--- a/hackerpp/index.html
+++ b/hackerpp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div><a class="start" onclick="start()">Start</a></div>
     <div><a class="restart" onclick="restartGame()">Restart</a></div>
         <div id="dd" class="dd-content">
             <div><a class="normal" href="../index.html" target="_blank">Normal</a></div>
