--- a/hackerpp/index.html
+++ b/hackerpp/index.html
@@ -14,7 +14,7 @@
             <div><a class="hackerpp" href="index.html" >Hacker++</a></div><br><br><br>
     </div>
     <p>Time : <span id="timer"></span></p>
-    <p>Clicks : <span id="counts"></span></p>
+    <p>Score : <span id="counts"></span></p>
     <p>Best Time : </p>
     <p class="best_time"></p>
     <p class="best_time"></p>
